# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/resourceschedule/background_task_mgr/bgtaskmgr.gni")

group("btm_target") {
     deps = [ ":bgtask" ]
}

ohos_executable("bgtask") {
    include_dirs = [
        "include",
        "//foundation/aafwk/standard/tools/aa/include",
    ]

    sources = [
        "//foundation/aafwk/standard/tools/aa/src/shell_command.cpp",
        "src/bgtaskmgr_shell_command.cpp",
        "src/main.cpp",
    ]

    cflags = []
    if (target_cpu == "arm") {
        cflags += [ "-DBINDER_IPC_32BIT" ]
    }

    deps = [
        "${bgtaskmgr_interfaces_path}/innerkits:bgtaskmgr_innerkits",
        "${bgtaskmgr_frameworks_path}:bgtaskmgr_fwk",
        "//utils/native/base:utils",
    ]

    configs = [
        "//foundation/aafwk/standard/tools/aa:ability_command_config",
        "//foundation/aafwk/standard/services/common:common_config",
    ]

    external_deps = [
        "aafwk_standard:base",
        "aafwk_standard:want",
        "hiviewdfx_hilog_native:libhilog",
        "ipc:ipc_core",
        "samgr_standard:samgr_proxy",
    ]

    install_enable = true
    part_name = "background_task_mgr"
}
