# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")
import("//foundation/resourceschedule/background_task_mgr/bgtaskmgr.gni")

module_output_path = "background_task_mgr/unittest"

ohos_unittest("bgtask_unit_test") {
  module_out_path = module_output_path
  include_dirs = [
    "${bgtaskmgr_services_path}/transient_task/inlcude",
    "${bgtaskmgr_services_path}/core/inlcude",
    "${bgtaskmgr_interfaces_path}/innerkits/transient_task/include",
    "//base/global/resmgr_standard/frameworks/resmgr/include",
    "//third_party/icu/icu4c/source/i18n",
  ]

  sources = [
    "background_task_mgr_service_test.cpp",
    "bg_continuous_task_mgr_test.cpp",
    "bg_transient_task_mgr_test.cpp",
    "mock/mock_bundle_manager_helper.cpp",
    "mock/mock_event_handler.cpp",
    "mock/mock_ipc.cpp",
    "mock/mock_notification_helper.cpp",
    "mock/mock_resource_manager.cpp",
  ]

  configs = [ "//utils/native/base:utils_config" ]

  deps = [
    "${bgtaskmgr_frameworks_path}:bgtaskmgr_fwk",
    "${bgtaskmgr_interfaces_path}/innerkits:bgtaskmgr_innerkits",
    "${bgtaskmgr_services_path}:bgtaskmgr_service",
    "//base/notification/ans_standard/frameworks/ans/core:ans_core",
    "//base/notification/ans_standard/frameworks/wantagent:wantagent_innerkits",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:app_manager",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "ces_standard:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
  ]

  subsystem_name = "resourceschedule"
  part_name = "background_task_mgr"
}

group("unittest") {
  testonly = true

  deps = [ ":bgtask_unit_test" ]
}
