# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/resourceschedule/background_task_mgr/bgtaskmgr.gni")
module_output_path = "background_task_mgr/bgtaskservice"

##############################fuzztest##########################################
ohos_fuzztest("BgTaskOnRemoteRequestFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file =
      "${bgtaskmgr_test_path}/fuzztest/bgtaskonremoterequest_fuzzer"

  include_dirs = [ "../common" ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "../common/fuzztest_helper.cpp",
    "bgtaskonremoterequest_fuzzer.cpp",
  ]

  deps = [ "${bgtaskmgr_services_path}:bgtaskmgr_service_static", ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:app_manager",
    "ability_runtime:wantagent_innerkits",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "access_token:libtokenid_sdk",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hisysevent_native:libhisysevent",
    "hiviewdfx_hilog_native:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "resource_management:global_resmgr",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  if (has_os_account_part) {
    cflags_cc += [ "-DHAS_OS_ACCOUNT_PART" ]
    external_deps += [ "os_account:os_account_innerkits" ]
  }

  if (distributed_notification_enable) {
    cflags_cc += [ "-DDISTRIBUTED_NOTIFICATION_ENABLE" ]
    external_deps += [ "distributed_notification_service:ans_innerkits" ]
    sources += [ "continuous_task/src/task_notification_subscriber.cpp" ]
  }

  if (background_task_mgr_graphics) {
    cflags_cc += [ "-DSUPPORT_GRAPHICS" ]
    deps += [ "//third_party/icu/icu4c:shared_icuuc" ]
    external_deps += [ "i18n:intl_util" ]
  }

  subsystem_name = "resourceschedule"
  part_name = "background_task_mgr"
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":BgTaskOnRemoteRequestFuzzTest",
  ]
}
###############################################################################
